--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -11,26 +11,30 @@
 
     <title>Dashboard</title>
 </head>
+
 <body>
     <div class="top-line">
         <div class="empresa">
-            <h1 class="empresa-nome">Nome da empresa</h1>
+            <h1 class="empresa-nome">
+                <span id="nomeEmp">Oi,</span>
+                Nome da empresa
+            </h1>
             <select name="slct_armazem" id="slct_armazem" onchange="trocarPaginaDash()">
                 <option value="geral">Geral</option>
                 <option value="armazem1">Armazém 1</option>
-            </select> 
+            </select>
         </div>
         <span id="span_data"></span>
     </div>
     <header>
-            <nav>
-                <ul>
-                    <li>
-                        <a href="/public/dashboard/geral/dash-geral.html">
-                            <img src="/public/img/icons/home.svg" alt="">
-                        </a>
-                    </li>
-                    <!-- <li>
+        <nav>
+            <ul>
+                <li>
+                    <a href="/public/dashboard/geral/dash-geral.html">
+                        <img src="/public/img/icons/home.svg" alt="">
+                    </a>
+                </li>
+                <!-- <li>
                         <a href="/public/dashboard/geral/dash-geral-temp.html">
                             <img src="/public/img/icons/temperatura.svg" alt="" class="temp">
                         </a>
@@ -40,78 +44,82 @@
                             <img src="/public/img/icons/umidade.svg" alt="">
                         </a>
                     </li> -->
-                </ul>
-                <!-- divisão da nav -->
-                <ul>
-                    <li>
-                        <a href="">
-                            <img src="/public/img/icons/configurações.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <img src="/public/img/icons/ajuda.svg" alt="">
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                        </a>
-                    </li>
-                </ul>
-            </nav>
-            <div class="content">
-                <div class="inner-content">
-                    <div class="container">
-                        <h3>Quantidade de armazéns com alertas acima do limite aceitável nas últimas 8 semanas</h3>
-                        <canvas id="chart-arm"></canvas>
-                    </div>
-                    <div class="container">
-                        <h3>Quantidade de alertas emitidos no últimos 4 meses</h3>
-                        <canvas id="chart-alert"></canvas>
-                    </div>
+            </ul>
+            <!-- divisão da nav -->
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="/public/img/icons/configurações.svg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="/public/img/icons/ajuda.svg" alt="">
+                    </a>
+                </li>
+                <li>
+                    <a href="" onclick="limparSessao()">
+                        <img src="/public/img/icons/logout.svg" alt="">
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <div class="content">
+            <div class="inner-content">
+                <div class="container">
+                    <h3>Quantidade de armazéns com alertas acima do limite aceitável nas últimas 8 semanas</h3>
+                    <canvas id="chart-arm"></canvas>
                 </div>
-                <div class="inner-content">
-                    <div class="container cards">
-                        <div class="container info">
-                            <div class="info">
-                                <h4>Sensores instalados</h4>
-                                <span class="valor">
-                                    <img src="../../img/icons/sensor.png" alt="">
-                                    123
-                                </span>
-                            </div>
-                            <div class="info" onclick="trocarPaginaDash()">
-                                <h4>Armazém com mais alertas</h4>
-                                <span class="valor">
-                                    <img src="../../img/icons/aviso.png" alt="">
-                                    Armazem 1 
-                                </span>
-                            </div>
-                            <div class="info">
-                                <h4>Alertas emitidos no mês</h4>
-                                <span class="valor">
-                                    <img src="../../img/icons/calendario.png" alt="">
-                                    32
-                                </span>
-                            </div>
-                        </div>
-                        <div class="card">
-                            <h3>Percentual de alertas de temperatura e umidade emitidos nos últimos 6 meses</h3>
-                            <canvas id="chart-porcent"></canvas>
-                        </div>
-                    </div>
-                    <div class="container">
-                        <h3>Níveis de umidade registrados no armazém nas últimas 6 horas</h3>
-                        <canvas id="chart-umdd"></canvas>
-                    </div>
+                <div class="container">
+                    <h3>Quantidade de alertas emitidos no últimos 4 meses</h3>
+                    <canvas id="chart-alert"></canvas>
                 </div>
             </div>
-        
+            <div class="inner-content">
+                <div class="container cards">
+                    <div class="container info">
+                        <div class="info">
+                            <h4>Sensores instalados</h4>
+                            <span class="valor">
+                                <img src="../../img/icons/sensor.png" alt="">
+                                123
+                            </span>
+                        </div>
+                        <div class="info" onclick="trocarPaginaDash()">
+                            <h4>Armazém com mais alertas</h4>
+                            <span class="valor">
+                                <img src="../../img/icons/aviso.png" alt="">
+                                Armazem 1
+                            </span>
+                        </div>
+                        <div class="info">
+                            <h4>Alertas emitidos no mês</h4>
+                            <span class="valor">
+                                <img src="../../img/icons/calendario.png" alt="">
+                                32
+                            </span>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <h3>Percentual de alertas de temperatura e umidade emitidos nos últimos 6 meses</h3>
+                        <canvas id="chart-porcent"></canvas>
+                    </div>
+                </div>
+                <div class="container">
+                    <h3>Níveis de umidade registrados no armazém nas últimas 6 horas</h3>
+                    <canvas id="chart-umdd"></canvas>
+                </div>
+            </div>
+        </div>
+
     </header>
 </body>
+
 </html>
 
 <script>
+    var nome = sessionStorage.NOME_EMPRESA;
+
     const ctxArm = document.getElementById('chart-arm');
 
     new Chart(ctxArm, {
@@ -119,13 +127,13 @@
         data: {
             labels: ['01/01 - 07/01', '08/01 - 14/01', '15/01 - 21/01', '22/01 - 28/01', '29/01 - 04/02', '05/02 - 11/02', '12/02 - 18/02', '19/02 - 25/02'],
             datasets: [{
-            label: 'Quantidade de armazens',
-            backgroundColor: '#025183',
-            borderColor: '#025183',
-            data: [18, 21, 17, 22, 26, 22, 20, 15],
-            borderWidth: 1,
-        },
-        ]
+                label: 'Quantidade de armazens',
+                backgroundColor: '#025183',
+                borderColor: '#025183',
+                data: [18, 21, 17, 22, 26, 22, 20, 15],
+                borderWidth: 1,
+            },
+            ]
         },
         options: {
             layout: {
@@ -133,7 +141,7 @@
                     bottom: 20
                 }
             }
-        }   
+        }
     });
 
 
@@ -159,7 +167,7 @@
                 }
             },
 
-        }  
+        }
     });
 
     ctxAlert = document.getElementById('chart-alert')
@@ -182,8 +190,8 @@
                 data: [25, 26, 28, 31],
                 borderWidth: 1
             }
-            
-        ]
+
+            ]
         },
         options: {
             layout: {
@@ -215,15 +223,15 @@
             }]
         },
         options: {
-             plugins:  {
+            plugins: {
                 legend: {
                     position: 'right'
                 }
-             },
-             layout:  {
+            },
+            layout: {
                 padding: 0,
                 margin: 0
-             }
+            }
         }
-        })
+    })
 </script>
