--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -55,7 +55,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="" onclick="limparSessao()">
+                    <a href="/public/index.html" onclick="limparSessao()">
                         <img src="/public/img/icons/logout.svg" alt="">
                     </a>
             </ul>
