atualizando nome da empresa na dashboard

--- a/public/dashboard/armazem/dash-armazem-umidd.html
+++ b/public/dashboard/armazem/dash-armazem-umidd.html
@@ -14,7 +14,7 @@
 <body>
     <div class="top-line">
         <div class="empresa">
-            <h1 class="empresa-nome">Nome da empresa - Umidade</h1>
+            <h1 class="empresa-nome">Latech - Umidade</h1>
             <select name="slct_armazem" id="slct_armazem" onchange="trocarPaginaDash()">
                 <option value="armazem1">Armazém 1</option>
                 <option value="geral">Geral</option>
