--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -16,8 +16,7 @@
     <div class="top-line">
         <div class="empresa">
             <h1 class="empresa-nome">
-                <span id="nomeEmp">Oi,</span>
-                Nome da empresa
+                <span id="nomeEmp">Latech</span>
             </h1>
             <select name="slct_armazem" id="slct_armazem" onchange="trocarPaginaDash()">
                 <option value="geral">Geral</option>
