--- a/public/index.html
+++ b/public/index.html
@@ -101,7 +101,7 @@
                 <div>
                     <p>
                         Com nossa ajuda, você pode reduzir os riscos de contaminação e deterioração do leite, melhorar a
-                        qualidade e o sabor do produto final, e atender aos padrões exigidos pelos consumidores e pela
+                        qualidade e o sabor do produto final e atender aos padrões exigidos pelos consumidores e pela
                         legislação. Nós temos experiência, tecnologia e compromisso com a satisfação dos nossos
                         clientes.
                     </p>
@@ -111,7 +111,7 @@
         <img class="milk02" src="img/background/milkwave2.png">
         <section id="solucao">
             <div class="container">
-                <text class="titulo">Solucao</text>
+                <text class="titulo">Solução</text>
                 <br>
                 <text class="texto">
                     Com nosso objetivo de minimizar as perdas de produtos e melhorar a qualidade do leite,
@@ -121,7 +121,7 @@
                 </text>
                 <div class="container cards">
                     <div class="card" id="cards_carousel">
-                        <h3 class="titulo">Instalacao</h3>
+                        <h3 class="titulo">Instalação</h3>
                         <img src="img/illustrations/thermostat.png" alt="">
                         <ol>
                             <li class="texto">
@@ -157,7 +157,7 @@
                         </ol>
                     </div>
                     <div class="card" id="cards_carousel">
-                        <h3 class="titulo">Beneficios</h3>
+                        <h3 class="titulo">Benefícios</h3>
                         <img src="img/illustrations/diagram.png" alt="">
                         <ol>
                             <li class="texto">
