--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles/style-dashboard.css">
+    <link rel="stylesheet" href="../style/style-dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/public/script/script.js"></script>
+    <script src="/../../script/script.js"></script>
 
     <title>Dashboard</title>
 </head>
@@ -29,8 +29,8 @@
         <nav>
             <ul>
                 <li>
-                    <a href="/public/dashboard/geral/dash-geral.html">
-                        <img src="/public/img/icons/home.svg" alt="">
+                    <a href="/../dashboard/geral/dash-geral.html">
+                        <img src="../../img/icons/home.svg" alt="">
                     </a>
                 </li>
                 <!-- <li>
@@ -48,17 +48,17 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="/public/img/icons/configurações.svg" alt="">
+                        <img src="/../../img/icons/configurações.svg" alt="">
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="/public/img/icons/ajuda.svg" alt="">
+                        <img src="/../../img/icons/ajuda.svg" alt="">
                     </a>
                 </li>
                 <li>
-                    <a href="" onclick="limparSessao()">
-                        <img src="/public/img/icons/logout.svg" alt="">
+                    <a href="/../../index.html" onclick="limparSessao()">
+                        <img src="/../../img/icons/logout.svg" alt="">
                     </a>
                 </li>
             </ul>
