--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -61,8 +61,7 @@
                         || (95<event.keyCode && event.keyCode<106)
                         || (event.keyCode==8) || (event.keyCode==9)
                         || (event.keyCode>34 && event.keyCode<40)
-                        || (event.keyCode==46) )" onkeypress="$(this).mask('12.345.678/9999-99')"" placeholder="
-                                00.000.000/0000-00">
+                        || (event.keyCode==46) )" onkeypress="$(this).mask('00.000.000/0000-00')" placeholder="00.000.000/0000-00">
                         </label>
                         <label for="inp_telefone">
                             Telefone:
@@ -72,7 +71,7 @@
                             || (event.keyCode==8) || (event.keyCode==9)
                             || (event.keyCode>34 && event.keyCode<40)
                             || (event.keyCode==46) )" onkeypress="$(this).mask('(00) 90000-0000')"
-                                placeholder="(99) 99999-9999">
+                                placeholder="(00) 00000-0000">
                         </label>
                     </div>
                     <label for="inp_email">
