--- a/public/dashboard/armazem/dash-armazem-temp.html
+++ b/public/dashboard/armazem/dash-armazem-temp.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/public/styles/style-dashboard.css">
+    <link rel="stylesheet" href="../style/style-dashboard.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/public/script/script.js"></script>
+    <script src="/../../script/script.js"></script>
 
     <title>Dashboard - Temperatura</title>
 </head>
@@ -26,18 +26,18 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="/public/dashboard/armazem/dash-armazem.html">
-                            <img src="/public/img/icons/home.svg" alt="">
+                        <a href="/../dashboard/armazem/dash-armazem.html">
+                            <img src="/../../img/icons/home.svg" alt="">
                         </a>
                     </li>
                     <li>
-                        <a href="/public/dashboard/armazem/dash-armazem-temp.html">
-                            <img src="/public/img/icons/temperatura.svg" alt="" class="temp">
+                        <a href="/../dashboard/armazem/dash-armazem-temp.html">
+                            <img src="/../../img/icons/temperatura.svg" alt="" class="temp">
                         </a>
                     </li>
                     <li>
-                        <a href="/public/dashboard/armazem/dash-armazem-umidd.html">
-                            <img src="/public/img/icons/umidade.svg" alt="">
+                        <a href="/../dashboard/armazem/dash-armazem-umidd.html">
+                            <img src="/../../img/icons/umidade.svg" alt="">
                         </a>
                     </li>
                 </ul>
@@ -45,17 +45,17 @@
                 <ul>
                     <li>
                         <a href="">
-                            <img src="/public/img/icons/configurações.svg" alt="">
+                            <img src="/../img/icons/configurações.svg" alt="">
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <img src="/public/img/icons/ajuda.svg" alt="">
+                            <img src="/../img/icons/ajuda.svg" alt="">
                         </a>
                     </li>
                     <li>
-                        <a href="/public/index.html" onclick="limparSessao()">
-                            <img src="/public/img/icons/logout.svg" alt="">
+                        <a href="/../../index.html" onclick="limparSessao()">
+                            <img src="/../img/icons/logout.svg" alt="">
                         </a>
                     </li>
                 </ul>
