Atualização sprint2 final

--- a/public/index.html
+++ b/public/index.html
@@ -214,8 +214,8 @@
                     <table id="tb-resultado">
                         <tr class="titulos-table">
                             <td></td>
-                            <td>Mês</td>
-                            <td>Ano</td>
+                            <td>Ganho mensal</td>
+                            <td>Ganho anual</td>
                             <td>Perda anual</td>
                         </tr>
                         <tr>
