atualizando script do banco de dados

--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -114,6 +114,11 @@
 </html>
 
 <script>
+    window.onload = () =>  {
+        nomeEmpresa = document.getElementById("nomeEmp");
+        nomeEmpresa.innerText = sessionStorage.NOME_EMPRESA;
+    }
+
     const ctxTemp = document.getElementById('chart-temp');
 
     new Chart(ctxTemp, {
