--- a/public/dashboard/armazem/dash-armazem.html
+++ b/public/dashboard/armazem/dash-armazem.html
@@ -15,7 +15,7 @@
 <body>
     <div class="top-line">
         <div class="empresa">
-            <h1 class="empresa-nome">Latech - Geral</h1>
+            <h1 class="empresa-nome"><span id="nomeEmp"></span> - Geral</h1>
             <select name="slct_armazem" id="slct_armazem" onchange="trocarPaginaDash()">
                 <option value="armazem1">Armazém 1</option>
                 <option value="geral">Geral</option>
