--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -57,7 +57,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/../../index.html" onclick="limparSessao()">
+                    <a href="/../../login.html" onclick="limparSessao()">
                         <img src="/../../img/icons/logout.svg" alt="">
                     </a>
                 </li>
