banco de dados atualizado e criando rotas para alertas

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -16,7 +16,7 @@
 <body>
     <div id="modal">
         <span id="msg_modal">
-            <img src="../public/img/icons/check-circle.svg" alt="">
+            <img src="./img/icons/check-circle.svg" alt="">
             Cadastro realizado com sucesso!
         </span>
     </div>
