--- a/public/dashboard/armazem/dash-armazem-temp.html
+++ b/public/dashboard/armazem/dash-armazem-temp.html
@@ -11,7 +11,7 @@
 
     <title>Dashboard - Temperatura</title>
 </head>
-<body>
+<body onload="dataHora()">
     <div class="top-line">
         <div class="empresa">
             <h1 class="empresa-nome"><span id="nomeEmp"></span> - Temperatura</h1>
