--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -12,7 +12,7 @@
     <title>Dashboard</title>
 </head>
 
-<body>
+<body onload="puxarDados()">
     <div class="top-line">
         <div class="empresa">
             <h1 class="empresa-nome">
@@ -129,25 +129,7 @@
 </html>
 
 <script>
-    function puxarDados() {
-        fetch("/graficos/listarMes")
-        .then(function (resposta) {
-            if(resposta.ok) {
-                console.log(resposta)
-            } else {
-                throw ('Houve um erro no API');
-            }
-        }).catch(function (resposta) {
-            console.error(resposta);
-        })
-
-    }
-
-    window.onload = () =>  {
-        nomeEmpresa = document.getElementById("nomeEmp");
-        nomeEmpresa.innerText = sessionStorage.NOME_EMPRESA;
-    }
-
+    
     const ctxArm = document.getElementById('chart-arm');
 
     new Chart(ctxArm, {
