Adicionado botão suporte na home

--- a/public/index.html
+++ b/public/index.html
@@ -273,6 +273,9 @@
                     <li><a href="#simulador" class="footer-link">Simulador</a></li>
                     <li><a href="#contato" class="footer-link">Contato</a></li>
                     <li><a href="login.html" class="footer-link">Entrar</a></li>
+                    <li></li>
+                    <li></li>
+                    <li><a href="https://latech-help.atlassian.net/">SUPORTE</a></li>
                 </ul>
             </nav>
 
