--- a/public/dashboard/geral/cadastroUsuario.html
+++ b/public/dashboard/geral/cadastroUsuario.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/cadastroUser.css">
+    <script src="../../script/script.js"></script>
     <title>Cadastro</title>
 </head> 
 <body>
@@ -53,21 +54,24 @@
             <div class="container-cadastro">
                 <div class="caixa-cadastro">
                     <h2>Cadastro de Usuários</h2>
+                    <div class="alerta-erro">
+                        <div class="card-erro" id="cardErro">
+                            <span id="mensagem_erro"></span>
+                        </div>
+                    </div>
                     <label for="input_email">Email</label>
                     <input id="input_email">
                     <label for="input_senha">Senha</label>
-                    <input id="input_senha">
+                    <input type="password" id="input_senha">
+                    <label for="input_confiSenha">Confirmar Senha</label>
+                    <input type="password" id="input_confiSenha">
                     <button onclick="usuario()">Cadastrar</button>
                 </div>
             </div>
 
-            <div class="container-cadastro">
-                <div class="caixa-cadastro">
-                    <h2>Cadastro de Armazéns</h2>
-                    <label for="">Cadastre os armazéns da sua Empresa</label>
-                    <button onclick="armazem()">Cadastrar novo Armazém</button>
-                </div>
-            </div>
+
+            <div id="div_aguardar" class="loading-div"></div>
+            <div id="div_erros_login"></div>
         </div>
     </div>
 
