--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/style-dashboard.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/../../script/script.js"></script>
+    <script src="/../../script/script.js" defer></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <title>Dashboard</title>
   </head>
 
-  <body onload="puxarDados()">
+  <body>
     <div class="top-line">
       <div class="empresa">
         <h1 class="empresa-nome">
@@ -197,139 +197,3 @@
   </body>
 </html>
 
-<script>
-  const ctxArm = document.getElementById("chart-arm");
-
-  new Chart(ctxArm, {
-    type: "line",
-    data: {
-      labels: [
-        "01/01 - 07/01",
-        "08/01 - 14/01",
-        "15/01 - 21/01",
-        "22/01 - 28/01",
-        "29/01 - 04/02",
-        "05/02 - 11/02",
-        "12/02 - 18/02",
-        "19/02 - 25/02",
-      ],
-      datasets: [
-        {
-          label: "Quantidade de armazens",
-          backgroundColor: "#025183",
-          borderColor: "#025183",
-          data: [18, 21, 17, 22, 26, 22, 20, 15],
-          borderWidth: 1,
-        },
-      ],
-    },
-    options: {
-      layout: {
-        padding: {
-          bottom: 20,
-        },
-      },
-    },
-  });
-
-  const ctxUmdd = document.getElementById("chart-umdd");
-
-  new Chart(ctxUmdd, {
-    type: "line",
-    data: {
-      labels: [
-        "13h00",
-        "13h30",
-        "14h00",
-        "14h30",
-        "15h00",
-        "15h30",
-        "16h00",
-        "16h30",
-        "17h00",
-        "17h30",
-        "18h00",
-      ],
-      datasets: [
-        {
-          label: "Níveis de umidade",
-          backgroundColor: "#58A1E4",
-          borderColor: "#58A1E4",
-          data: [
-            60.0, 65.0, 55.0, 60.0, 70.0, 65.0, 58.0, 68.0, 67.0, 52.0, 63.0,
-            58.0, 61.0, 56.0,
-          ],
-          borderWidth: 1,
-        },
-      ],
-    },
-    options: {
-      layout: {
-        padding: {
-          bottom: 20,
-        },
-      },
-    },
-  });
-
-  ctxAlert = document.getElementById("chart-alert");
-
-  new Chart(ctxAlert, {
-    type: "bar",
-    data: {
-      labels: ["Janeiro", "Fevereiro", "Março", "Abril"],
-      datasets: [
-        {
-          label: "Umidade",
-          backgroundColor: "#58A1E4",
-          borderColor: "#58A1E4",
-          data: [30, 24, 26, 28],
-          borderWidth: 1,
-        },
-        {
-          label: "Temperatura",
-          backgroundColor: "#025183",
-          borderColor: "#025183",
-          data: [25, 26, 28, 31],
-          borderWidth: 1,
-        },
-      ],
-    },
-    options: {
-      layout: {
-        padding: {
-          bottom: 20,
-        },
-      },
-    },
-  });
-
-  ctxPorcent = document.getElementById("chart-porcent");
-
-  new Chart(ctxPorcent, {
-    type: "pie",
-    data: {
-      labels: ["Temperatura", "Umidade"],
-      datasets: [
-        {
-          label: "# of Votes",
-          data: [110, 108],
-          backgroundColor: ["#025183", "#58A1E4"],
-          borderColor: ["#025183", "#58A1E4"],
-          borderWidth: 1,
-        },
-      ],
-    },
-    options: {
-      plugins: {
-        legend: {
-          position: "right",
-        },
-      },
-      layout: {
-        padding: 0,
-        margin: 0,
-      },
-    },
-  });
-</script>
