função puxarDados jogando dados no gráfico

--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -12,7 +12,7 @@
     <title>Dashboard</title>
   </head>
 
-  <body>
+  <body onload="puxarDados()">
     <div class="top-line">
       <div class="empresa">
         <h1 class="empresa-nome">
