--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="../style/style-dashboard.css" />
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="/../../script/script.js" defer></script>
+    <script src="../script/dashboards.js" defer></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
     <title>Dashboard</title>
   </head>
 
-  <body onload="puxarDados()">
+  <body onload="puxarDados(), dataHora()">
     <div class="top-line">
       <div class="empresa">
         <h1 class="empresa-nome">
