arrumando gráficos zerados

--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -49,7 +49,7 @@
             </a>
           </li>
           <li>
-            <a href="https://latech-help.atlassian.net/">
+            <a href="https://latech-help.atlassian.net/servicedesk/customer/portals" target="_blank">
               <i class="ph ph-question"></i>
             </a>
           </li>
