implementado funções relacionadas a armazens

--- a/public/dashboard/geral/dash-geral.html
+++ b/public/dashboard/geral/dash-geral.html
@@ -80,101 +80,17 @@
               <div class="lista-armazens">
                 <h4>Lista de armazens</h4>
                 <span class="valor">
-                  <ul>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" />
-                      <a href=""> Armazem 1 </a>
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 2</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 3</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 4</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 5</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 6</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 7</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 8</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 9</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 10</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 11</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 12</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 13</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 14</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 15</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 16</a
-                      >
-                    </li>
-                    <li>
-                      <img src="../../img/icons/aviso.png" alt="" /><a href=""
-                        >Armazem 17</a
-                      >
-                    </li>
+                  <ul id="lista_armazens">
                   </ul>
                 </span>
               </div>
               <div class="info" onclick="trocarPaginaDash()">
                 <h4>Armazém com mais alertas & Alertas emitidos no mês</h4>
-                <span class="valor">
+                <span class="valor" id="max_alert_arm">
                   <img src="../../img/icons/aviso.png" alt="" />
-                  Armazem 1
+                  <span id="max_alert_arm"></span>
                   <img src="../../img/icons/calendario.png" alt="" />
-                  26
+                  <span id="qtd_alert_mes"></span>
                 </span>
               </div>
             </div>
